force-app/main/default/objects/Audit_Log__c/fields/Acci_n_realizada__c.field-meta.xml
<CustomField>
    <fullName>Acci_n_realizada__c</fullName>
    <label>Acción realizada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>