force-app/main/default/objects/Audit_Log__c/fields/Datos_nuevos__c.field-meta.xml
<CustomField>
    <fullName>Datos_nuevos__c</fullName>
    <label>Datos nuevos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>