force-app/main/default/objects/Audit_Log__c/fields/Datos_previos__c.field-meta.xml
<CustomField>
    <fullName>Datos_previos__c</fullName>
    <label>Datos previos</label>
    <type>TextArea</type>
</CustomField>