force-app/main/default/objects/Audit_Log__c/fields/Fecha_Modificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Modificacion__c</fullName>
    <label>Fecha Modificacion</label>
    <type>DateTime</type>
</CustomField>