force-app/main/default/objects/Audit_Log__c/fields/Id_registro__c.field-meta.xml
<CustomField>
    <fullName>Id_registro__c</fullName>
    <label>Id registro</label>
    <length>20</length>
    <type>Text</type>
</CustomField>